# pytorch-custom-model

./: .gitignore  README.md  predict.py  pyproject.toml  trainer.py
