[tool.poetry]
name = "pytorch-custom-model"
version = "0.1.0"
description = ""
authors = ["Lucas Moura de Almeida <lucas.moura020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]
ignore = [ "F403", "F405" ]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.black]
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10